fix: adjusting pieces internal scroll overflow and increase mock-pieces.csv total amount of registers.

--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,8 @@ button.primary {
   list-style: none;
   display: flex;
   flex-direction: column;
+  max-height: 50rem;
+  overflow-y: auto;
   gap: 0.5rem;
   padding: 0;
   margin: 0;
